contextkit (0.5~unreleased) unstable; urgency=low

  * Released as 0.5 because of a version numbering bug, no major new features,
    which explains the version bump.
  *

 -- Jean-Luc Lamadon <jean-luc.lamadon@nokia.com>  Fri, 30 Oct 2009 03:31:16 +0200

contextkit (0.4) unstable; urgency=low

  * libcontextprovider now supports multiple providers for one property
  * Support the new ContextKit D-Bus protocol in libcontextprovider

  Implemented: SWP#CntFr-350

 -- Jean-Luc Lamadon <jean-luc.lamadon@nokia.com>  Fri, 30 Oct 2009 03:05:24 +0200

contextkit (0.3.11) unstable; urgency=low

  * Subscriber part of libcontextsubscriber now supports multiple
    providers for one property.
  * Support both the old and the new ContextKit D-Bus protocol in
    libcontextsubscriber.
  * The start command in context-provide is now able to reregister
    the service name if needed as advertised in the help.
  * context-provide supports proxying in Commander mode.
  * New test package: propertymonitor-tests

  Implemented: SWP#CntFr-349, SWP#CntFr-353, SWP#CntFr-334

 -- Marja Hassinen <ext-marja.2.hassinen@nokia.com>  Thu, 29 Oct 2009 11:12:00 +0300

contextkit (0.3.10) unstable; urgency=low

  * Introspection part of libcontextsubscriber now supports multiple
    providers for one property.
  * New tool: context-ls for listing available context properties.

  Implemented: SWP#CntFr-324, SWP#CntFr-318, SWP#CntFr-343

 -- Marja Hassinen <ext-marja.2.hassinen@nokia.com>  Tue, 15 Oct 2009 16:25:04 +0300

contextkit (0.3.9) unstable; urgency=low

  * Parsing provider declarations with a nano dom parser which recognizes complex types.
  * Removed complex types from core.context, since they're not
    supported yet.

  Implemented: SWP#CntFr-337, SWP#CntFr-203

 -- Marja Hassinen <ext-marja.2.hassinen@nokia.com>  Tue, 06 Oct 2009 15:00:00 +0300

contextkit (0.3.8) unstable; urgency=low

  * libcontextsubscriber-tests lintian errors fixed.