@@ -1,9 +1,7 @@
 usr/bin/context-provide
 usr/bin/context-listen
-usr/bin/context-provide-internal
 usr/bin/context-ls
 usr/share/man/man1/context-provide.1
-usr/share/man/man1/context-provide-v2.1
 usr/share/man/man1/context-listen.1
 usr/share/man/man1/context-print-info.1
 usr/share/man/man1/context-ls.1
