@@ -94,7 +94,7 @@ Description: Python bindings for ContextKit APIs
 Package: contextkit-utils
 Section: utils
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, python-contextkit, python-dbus, python
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Command line utilities for ContextKit
  This package contains the context-provide and context-listen
  tools. You can use context-provide to quickly provide context
