@@ -1,4 +1,4 @@
-SUBDIRS = src unit-tests doc customer-tests context-provide man
+SUBDIRS = src unit-tests doc customer-tests context-provide
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = contextprovider-1.0.pc
