@@ -1,1 +1,0 @@
-dist_man_MANS = context-provide-v2.1
