@@ -1,6 +1,4 @@
-dist_man_MANS = context-provide.1
-
-dist_bin_SCRIPTS = context-provide context-rlwrap
+dist_bin_SCRIPTS = context-rlwrap
 
 pkgpython_PYTHON = ContextKit/flexiprovider.py				\
                    ContextKit/ContextProvider.py			\
